--- a/css/style.css
+++ b/css/style.css
@@ -1917,6 +1917,7 @@ body {
           top: 51px;
           right: -230px;
           background: #fff;
+          display: none;
           z-index: 3;
           box-sizing: border-box; }
           #header .inner .menuWeb #gnb > li .sub a {
