--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,7 +124,7 @@ body {
 						top: 51px;
 						right: -230px;
 						background: #fff;
-						// display: none;
+						display: none;
 						z-index: 3;
 						box-sizing: border-box;
 					
