--- a/css/style.css
+++ b/css/style.css
@@ -2018,7 +2018,7 @@ body {
             left: -100%;
             background: #fff; }
           #header .inner .menuWeb #gnb > li .sub::after {
-            content: "lorem is lorem";
+            content: "";
             display: block;
             clear: both;
             width: 100%;
@@ -2048,7 +2048,7 @@ body {
           transition: 0.5s;
           text-align: center; }
         #header .inner .menuWeb .util li:last-child > a {
-          width: 30%;
+          width: 45%;
           position: absolute;
           top: 55%;
           transform: translateY(-50%);
@@ -2057,6 +2057,9 @@ body {
           font-family: "Spartan";
           line-height: 15px;
           border-right: none; }
+          #header .inner .menuWeb .util li:last-child > a > i {
+            display: inline-block;
+            padding-left: 5px; }
     #header .inner .btnCall {
       position: absolute;
       top: 20%;
