--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,24 +73,6 @@ body {
 				
 				> li {
 					float: left;
-				
-					// div {
-
-					// 	&:nth-of-type(2) {
-					// 		&.line1{
-
-					// 			h2{
-					// 				letter-spacing: 10px;
-					// 			}
-					// 		}
-					// 		&.line2 {
-					// 			width: 30%;
-					// 		}
-					// 		&.line3 {
-					// 			width: 30%;
-					// 		}
-					// 	}
-					// }
 					
 					> a {
 						display: block;
@@ -127,7 +109,9 @@ body {
 						display: none;
 						z-index: 3;
 						box-sizing: border-box;
-					
+						// position: relative;
+
+						
 
 						a {
 							color: #111;
@@ -252,7 +236,7 @@ body {
 							// border-top: 1px solid #555;
 						}
 						&::after {
-							content: "lorem is lorem";
+							content: "";
 							display: block;
 							clear: both;
 							width: 100%;
@@ -261,7 +245,6 @@ body {
 							top: 0;
 							right: -100%;
 							background: #fff;
-							// border-top: 1px solid #555;
 							box-sizing: border-box;
 						}
 					}
@@ -292,7 +275,7 @@ body {
 					}
 
 					&:last-child > a {
-						width: 30%;
+						width: 45%;
 						position: absolute;
 						top: 55%;
 						transform: translateY(-50%);
@@ -302,8 +285,10 @@ body {
 						line-height: 15px;
 						border-right: none;
 
-						// > i {
-						// }
+						> i {
+							display: inline-block;
+							padding-left: 5px;
+						}
 					}
 				}
 			}
