--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,7 +54,7 @@ body {
 			bottom: 25%;
 
 			a {
-				font: bold 25px/1 "Spartan";
+				font: bold 25px/1 "STIX Two Text";
 				color: #111;
 			}
 		}
@@ -118,7 +118,7 @@ body {
 						}
 
 						.line1 {
-							width: 25%;
+							width: 24%;
 							height: 100%;
 							background: #fff;
 							float: left;
@@ -126,16 +126,17 @@ body {
 							text-align: -webkit-center;
 
 							h2 {
-								display: inline-block;
-								font: bold 22px/1 "Spartan";
+								display: block;
+								font: bold 22px/1 "STIX Two Text";
 								border-bottom: 2px solid #555;
 								margin-bottom: 22px;
-								margin-top: 40px;
-								padding-bottom: 10px;
+								margin-top: 29px;
+								padding-bottom: 15px;
 								letter-spacing: 1.5px;
+								text-align: left;
 							}
 							.pic {
-								width: 230px;
+								width: 280px;
 								height: 180px;
 
 								img {
