--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,6 +73,46 @@ body {
 				
 				> li {
 					float: left;
+
+
+					&:nth-of-type(2) {
+						.sub {
+							.line2 {
+								width: 25%;
+								margin-left: 50px;
+								
+								h2 {
+									width: 250px;
+								}
+							}
+							.line3 {
+								width: 25%;
+
+								h2 {
+									width: 250px;
+								}
+							}
+						}
+					}
+					&:nth-of-type(5) {
+						.sub {
+							.line2 {
+								width: 25%;
+								margin-left: 50px;
+								
+								h2 {
+									width: 250px;
+								}
+							}
+							.line3 {
+								width: 25%;
+
+								h2 {
+									width: 250px;
+								}
+							}
+						}
+					}
 					
 					> a {
 						display: block;
@@ -110,6 +150,7 @@ body {
 						z-index: 3;
 						box-sizing: border-box;
 						// position: relative;
+
 
 						
 
@@ -169,6 +210,7 @@ body {
 								a {
 									text-align: left;
 									color: #111;
+									letter-spacing: 1.2px;
 								}
 							}
 						}
@@ -196,6 +238,7 @@ body {
 								a {
 									text-align: left;
 									color: #111;
+									letter-spacing: 1.2px;
 								}
 							}
 						}
@@ -222,6 +265,7 @@ body {
 								a {
 									text-align: left;
 									color: #111;
+									letter-spacing: 1.2px;
 								}
 							}
 						}
