--- a/css/style.css
+++ b/css/style.css
@@ -1062,6 +1062,21 @@ fieldset {
       width: 100%;
       border-collapse: collapse;
       margin-bottom: 20px; }
+      .join .inner .table2 tr input[type="radio"] {
+        margin-right: 5px; }
+      .join .inner .table2 tr label {
+        font-size: 18px;
+        font-family: "Noto Sans KR";
+        margin-right: 10px; }
+      .join .inner .table2 tr select {
+        width: 200px;
+        height: 55px;
+        margin-right: 20px;
+        padding-left: 10px;
+        font-size: 18px;
+        color: #666; }
+        .join .inner .table2 tr select:nth-of-type(3) {
+          margin-right: 0; }
       .join .inner .table2 input[type="text"],
       .join .inner .table2 input[type="password"] {
         width: 40%;
@@ -1082,7 +1097,11 @@ fieldset {
         box-sizing: border-box;
         color: #fff;
         background: #222; }
-      .join .inner .table2 .box1 {
+      .join .inner .table2 .box {
+        padding: 30px 0px; }
+        .join .inner .table2 .box span {
+          padding-bottom: 20px; }
+      .join .inner .table2 textarea {
         display: block;
         resize: none;
         width: 100%;
@@ -1092,6 +1111,7 @@ fieldset {
         color: #888;
         border: 1px solid #aaa;
         margin-bottom: 30px;
+        margin-top: 20px;
         text-align: left; }
 
 @media screen and (max-width: 1179px) {
