--- a/css/style.css
+++ b/css/style.css
@@ -1097,9 +1097,9 @@ fieldset {
         box-sizing: border-box;
         color: #fff;
         background: #222; }
-      .join .inner .table2 .box {
-        padding: 30px 0px; }
-        .join .inner .table2 .box span {
+      .join .inner .table2 .box1 {
+        padding: 80px 0px 0px; }
+        .join .inner .table2 .box1 span {
           padding-bottom: 20px; }
       .join .inner .table2 textarea {
         display: block;
@@ -1113,6 +1113,12 @@ fieldset {
         margin-bottom: 30px;
         margin-top: 20px;
         text-align: left; }
+      .join .inner .table2 .agree {
+        margin-top: 40px;
+        text-align: center; }
+        .join .inner .table2 .agree > span {
+          font: bold 17px/1 "Noto Sans KR";
+          letter-spacing: 1.1px; }
 
 @media screen and (max-width: 1179px) {
   .join {
