--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -239,8 +239,8 @@
 				background: #222;
 				// background: linear-gradient(60deg, #d9a7c7, #fffcdc);
 			}
-			.box {
-				padding: 30px 0px;
+			.box1 {
+				padding: 80px 0px 0px;
 				
 				span {
 					padding-bottom: 20px;
@@ -260,6 +260,16 @@
 				margin-top: 20px;
 				text-align: left;
 
+			}
+			.agree {
+				margin-top: 40px;
+				text-align: center;
+				
+				>span {
+					font:bold 17px/1 "Noto Sans KR";
+					letter-spacing: 1.1px;
+				}
+				
 			}
 		}
 	}
