--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -87,7 +87,7 @@
 			color: #eb5079;
 			position: absolute;
 			right: 20px;
-			top: -2%;
+			top: -1%;
 
 			> .cir {
 				width: 5px;
@@ -186,10 +186,13 @@
 			border-collapse: collapse;
 			margin-bottom: 20px;
 			tr {
-				th {
 				
+				&:last-of-type >th {
+					width: 20%;
 				}
+			
 				td {
+					
 				}
 				input[type="radio"] {
 					margin-right: 5px;
@@ -197,7 +200,15 @@
 				label {
 					font-size: 18px;
 					font-family: "Noto Sans KR";
-					margin-right: 10px;
+				}
+				.recommend {
+					padding: 40px 0px 20px 0;
+					>label {
+						// margin-right: 60px;
+						display: inline-block;
+						width: 110px;
+						height: 50px;
+					}
 				}
 
 				select {
@@ -228,22 +239,38 @@
 			input[type="reset"] {
 				width: 30%;
 				height: 70px;
-				margin: 0 auto;
 				margin-left: 20px;
 				float: left;
 				font: 300 25px/70px "Noto Sans KR";
-				// border: 1px solid #fff;
-				transform: translateX(24px);
-				box-sizing: border-box;
+				transform: translateX(120px);
 				color: #fff;
 				background: #222;
-				// background: linear-gradient(60deg, #d9a7c7, #fffcdc);
-			}
-			.box1 {
-				padding: 80px 0px 0px;
+				border: 1px solid #fff;
+				box-sizing: border-box;
+				cursor: pointer;
 				
+			}
+			
+			.box1 {
+				padding: 60px 0px 0px;
+				#box1_agree {
+					width: 20px;
+					height: 20px;
+					vertical-align: text-bottom; 
+				}
 				span {
-					padding-bottom: 20px;
+					padding-left: 10px;
+				}
+			}
+			.box2 {
+				padding: 30px 0px 30px;
+				#box2_agree {
+					width: 20px;
+					height: 20px;
+					vertical-align: text-bottom; 
+				}
+				span {
+					padding-left: 10px;
 				}
 			}
 
@@ -264,9 +291,15 @@
 			.agree {
 				margin-top: 40px;
 				text-align: center;
+				border-bottom: 1px solid #aaa;
+				padding-bottom: 40px;
+
+				input[type="checkbox"] {
+					vertical-align: middle;
+				}
 				
 				>span {
-					font:bold 17px/1 "Noto Sans KR";
+					font: 17px/1 "arial";
 					letter-spacing: 1.1px;
 				}
 				
