--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -597,7 +597,7 @@
 	}
 }
 // cursor_pointer ------------------------------------------
-.result {
+.cursor {
 	position: absolute;
 	top: 0;
 	left: 0;
