--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1498,17 +1498,17 @@ body {
 }
 
 // cursor_pointer ------------------------------------------
-.result {
+.cursor {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 0px;
+	left: 0px;
 	background: rgb(255, 168, 184);
 	width: 40px;
 	height: 40px;
 	opacity: 0.7;
 	border-radius: 100%;
 	transform: translate(-50%, -50%);
-	z-index: 3;
+	z-index: 10;
 }
 
 //  tablet ------------------------------------------------------------------
