--- a/css/style.css
+++ b/css/style.css
@@ -2818,15 +2818,16 @@ body {
           letter-spacing: 1.3px;
           position: relative; }
           #brand .inner .wrap article h2 .brand_arrow {
-            width: 18px;
-            height: 18px;
+            width: 20px;
+            height: 20px;
             float: right;
-            position: relative; }
+            position: relative;
+            cursor: pointer; }
             #brand .inner .wrap article h2 .brand_arrow::before {
               content: "";
               display: block;
               width: 100%;
-              height: 1px;
+              height: 2px;
               background: #111;
               position: absolute;
               top: 50%;
@@ -2834,7 +2835,7 @@ body {
             #brand .inner .wrap article h2 .brand_arrow::after {
               content: "";
               display: block;
-              width: 1px;
+              width: 2px;
               height: 100%;
               background: #111;
               position: absolute;
@@ -2847,13 +2848,23 @@ body {
           margin-bottom: 40px;
           font: 15px/1.5 "Spartan";
           letter-spacing: 1.3px;
-          color: #333; }
+          color: #333;
+          display: none;
+          transition: 0.5s; }
         #brand .inner .wrap article span {
           float: right;
           margin-top: 30px;
           border-bottom: 1px solid #444;
           color: #555;
-          font: 14px/1.3 "Spartan"; }
+          font: 14px/1.3 "Spartan";
+          display: none;
+          transition: 0.5s; }
+        #brand .inner .wrap article.brand_on .brand_arrow::after {
+          display: none; }
+        #brand .inner .wrap article.brand_on p {
+          display: inline-block; }
+        #brand .inner .wrap article.brand_on span {
+          display: inline-block; }
   #brand.on .inner h1 {
     transform: translateY(0);
     opacity: 1; }
