--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -305,6 +305,10 @@
 				
 			}
 		}
+		p{
+			font: 15px/1 'Noto Sans KR';
+			color: #eb5079;
+		}
 	}
 }
 // tablet -------------------------------------------------------------------
