메인페이지 수정

--- a/css/style.css
+++ b/css/style.css
@@ -2529,7 +2529,7 @@ body {
         text-align: left;
         margin-right: 50px;
         margin-bottom: 50px;
-        background: #ededed;
+        background: #ddd;
         position: relative;
         float: left;
         transition: 0.5s;
