--- a/scss/style.scss
+++ b/scss/style.scss
@@ -688,7 +688,7 @@ body {
 				text-align: left;
 				margin-right: 50px;
 				margin-bottom: 50px;
-				background: #ededed;
+				background: #ddd;
 				position: relative;
 				float: left;
 				transition: 0.5s;
